--- a/deploy/olm-catalog/prod/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/ibm-bamoe/bamoe-rhel8-operator:8.0.1
-    createdAt: "2022-10-06 11:21:23"
+    createdAt: "2022-10-20 14:43:44"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -183,7 +183,7 @@ spec:
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_8.0.1
                   value: registry.stage.redhat.io/ibm-bamoe/bamoe-dashbuilder-rhel8:8.0.1
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_8.0.1
-                  value: registry.redhat.io/openshift4/ose-cli:v4.10
+                  value: registry.redhat.io/openshift4/ose-cli:v4.11
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_8.0.1
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_8.0.1
@@ -207,7 +207,7 @@ spec:
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_8.0.0
                   value: registry.redhat.io/ibm-bamoe/bamoe-dashbuilder-rhel8:8.0.0
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_8.0.0
-                  value: registry.redhat.io/openshift4/ose-cli:v4.10
+                  value: registry.redhat.io/openshift4/ose-cli:v4.11
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_8.0.0
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_8.0.0
@@ -226,6 +226,8 @@ spec:
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.7
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.6
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.6
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.11
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.11
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.10
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.10
                 image: registry.stage.redhat.io/ibm-bamoe/bamoe-rhel8-operator:8.0.1
