--- a/deploy/olm-catalog/dev/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:8.0.1
-    createdAt: "2022-10-20 14:43:44"
+    createdAt: "2022-11-08 16:39:24"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -18,7 +18,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.1-1-dev-6sxfhtw4j6
+  name: bamoe-businessautomation-operator.8.0.1-1-dev-bszd8n8ghk
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -405,7 +405,7 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-6sxfhtw4j6
+    operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-bszd8n8ghk
   links:
   - name: Product Page
     url: https://ibm.com
@@ -421,5 +421,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-6sxfhtw4j6
-  version: 8.0.1-1+6sxfhtw4j6
+      operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-bszd8n8ghk
+  version: 8.0.1-1+bszd8n8ghk
