--- a/deploy/olm-catalog/test/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/bamoe-8-rhpam-rhel8-operator:8.0.1
-    createdAt: "2022-10-20 14:43:44"
+    createdAt: "2022-11-08 16:39:24"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -18,7 +18,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.1-1-dev-7xj86rglwn
+  name: bamoe-businessautomation-operator.8.0.1-1-dev-9cp9bt5qrb
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -405,7 +405,7 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-7xj86rglwn
+    operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-9cp9bt5qrb
   links:
   - name: Product Page
     url: https://ibm.com
@@ -421,5 +421,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-7xj86rglwn
-  version: 8.0.1-1+7xj86rglwn
+      operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-9cp9bt5qrb
+  version: 8.0.1-1+9cp9bt5qrb
