--- a/deploy/olm-catalog/test/8.0.5-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/8.0.5-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/bamoe-8-rhpam-rhel8-operator:8.0.5
-    createdAt: "2024-02-29 13:00:53"
+    createdAt: "2024-03-01 18:08:07"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -20,7 +20,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.5-1-dev-dl7rdwm4ls
+  name: bamoe-businessautomation-operator.8.0.5-1-dev-q7m7qbvk47
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -185,7 +185,7 @@ spec:
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_8.0.5
                   value: registry-proxy.engineering.redhat.com/ibm-bamoe/bamoe-dashbuilder-rhel8:8.0.5
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_8.0.5
-                  value: registry.redhat.io/openshift4/ose-cli:v4.12
+                  value: registry.redhat.io/openshift4/ose-cli:v4.14
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_8.0.5
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_8.0.5
@@ -209,7 +209,7 @@ spec:
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_8.0.4
                   value: registry.redhat.io/ibm-bamoe/bamoe-dashbuilder-rhel8:8.0.4
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_8.0.4
-                  value: registry.redhat.io/openshift4/ose-cli:v4.12
+                  value: registry.redhat.io/openshift4/ose-cli:v4.14
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_8.0.4
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_8.0.4
@@ -220,12 +220,12 @@ spec:
                   value: registry.redhat.io/amq7/amq-broker:7.8
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_LATEST
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:latest
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.14
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.14
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.13
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.13
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.12
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.12
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.11
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.11
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.10
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.10
                 image: registry-proxy.engineering.redhat.com/rh-osbs/bamoe-8-rhpam-rhel8-operator:8.0.5
                 imagePullPolicy: Always
                 name: bamoe-business-automation-operator
@@ -401,7 +401,7 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-dl7rdwm4ls
+    operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-q7m7qbvk47
   links:
   - name: Product Page
     url: https://ibm.com
@@ -417,5 +417,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-dl7rdwm4ls
-  version: 8.0.5-1+dl7rdwm4ls
+      operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-q7m7qbvk47
+  version: 8.0.5-1+q7m7qbvk47
